more css and html fixes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,19 +8,21 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-<div class="intro">
+    <div class="intro">
+        <div class="image-container">
+            <img src="images/cards.webp" alt="alt">
+        </div>
+        <span>Welcome To Our Game !</span>
+      </div>
 
-<div class="box">
-<p id="dots">Welcome To Our Website</p>
-</div>
-</div>
 
-<div class="second-intro">
-<h1>SOLITAIRE</h1>
-<span>The addictive game you've been playing on your computer for years now goes wherever you do.</span>
-<span>Whether you know it as Patience, Klondike, or just Solitaire, this popular game is one of the best games around.</span>
-<br>
-<p>Download It Right Now!!</p>
+      <div class="second-intro">
+        <h1>SOLITAIRE</h1>
+        <span>The addictive game you've been playing on your computer for years now goes wherever you do.</span>
+        <span>Whether you know it as Patience, Klondike, or just Solitaire, this popular game is one of the best games around.</span>
+        <p>Download It Right Now!!</p>
+     
+      
 <br>
 <ul>
 <li>
