--- a/frontend/leaderboard.html
+++ b/frontend/leaderboard.html
@@ -7,18 +7,15 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+
 <body>
     <div class="intro">
-        <div><img src="images/166621.jpg" alt="img"></div>
-
-        <div class="box">
-            <p id="dots">Welcome To Our Website</p>
+        <div class="image-container">
+            <img src="images/cards.webp" alt="alt">
         </div>
-
-    </div>
-</head>
-<body>
-
+        <span>Welcome To Our Game !</span>
+      </div>
+      
 <h1>🏆 Leaderboard</h1>
 
 <form id="scoreForm">
