--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,52 +46,56 @@
 </ul>
 </div>
 
-<div class="leaderboard">
-<h1>LEADERBOARD</h1>
-<table>
-<thead>
-<tr>
-<th>Rank</th>
-<th>Name</th>
-<th>Score</th>
-<th>Duration</th>
-</tr>
-</thead>
-<tbody id="leaderboardBody">
+    <div class="leaderboard">
+        <h1>🏆 LEADERBOARD - Top 5 🏆</h1>
+        <table>
+            <thead>
+                <tr>
+                    <th>Rank</th>
+                    <th>Name</th>
+                    <th>Score</th>
+                    <th>Duration</th>
+                </tr>
+            </thead>
+    <tbody id="leaderboardBody">
 
-</tbody>
-</table>
+    </tbody>
+        </table>
 <button onclick="window.location.href='leaderboard.html'">Check All LEADERBOARD</button>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script>
-function loadTop5() {
-const tbody = document.getElementById('leaderboardBody');
+<footer class="footer">
+    <p>2025 Solitaire Game | All Rights Reserved</p>
+    <p>Done By : Tarek Sarakbi</p>
+  </footer>
 
-axios.get('../backend/get_score.php')
-.then(res => {
-tbody.innerHTML = '';
 
-const top5 = res.data.slice(0, 5);
+  <script src="axios.min.js"></script>
 
-top5.forEach(player => {
-const tr = document.createElement('tr');
-tr.innerHTML = `
-<td>${player.rank}</td>
-<td>${player.name}</td>
-<td>${player.score}</td>
-<td>${player.duration}</td>
-`;
-tbody.appendChild(tr);
-});
-})
-.catch(err => console.error('Error loading leaderboard:', err));
-}
-
-window.addEventListener('DOMContentLoaded', loadTop5);
-</script>
-
-<script src="java.js"></script>
+  <script>
+  function loadTop5() {
+    const tbody = document.getElementById('leaderboardBody');
+  
+    axios.get('../backend/get_score.php').then(res => {
+      tbody.innerHTML = '';
+  
+      const top5 = res.data.slice(0, 5);
+  
+      top5.forEach(player => {
+        tbody.innerHTML += `
+          <tr>
+            <td>${player.rank}</td>
+            <td>${player.name}</td>
+            <td>${player.score}</td>
+            <td>${player.duration}</td>
+          </tr>
+        `;
+      });
+    });
+  }
+  
+  window.addEventListener('DOMContentLoaded', loadTop5);
+  </script>
+  
 </body>
 </html>
