added game links

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
 <br>
 <ul>
 <li>
-<a href="">
+<a href="https://play.google.com/store/apps/details?id=com.mobilityware.solitaire&pcampaignid=web_share">
 <div class="download-android">
 <i class="fa fa-android fa-2x"></i>
 <span class="p1">Download from</span>
@@ -35,7 +35,7 @@
 </a>
 </li>
 <li>
-<a href="">
+<a href="https://apps.apple.com/us/app/solitaire/id359917414">
 <div class="download-apple">
 <i class="fa fa-apple fa-2x"></i>
 <span class="p1">Download from</span>
