--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
         <h1>SOLITAIRE</h1>
         <span>The addictive game you've been playing on your computer for years now goes wherever you do.</span>
         <span>Whether you know it as Patience, Klondike, or just Solitaire, this popular game is one of the best games around.</span>
-        <p>Download It Right Now!!</p>
+        <p>Download It Right Now</p>
      
       
 <br>
