--- a/frontend/index.html
+++ b/frontend/index.html
@@ -70,32 +70,9 @@
   </footer>
 
 
-  <script src="axios.min.js"></script>
+  <script src="script/axios.min.js"></script>
+  <script src="script/script.js"></script>
 
-  <script>
-  function loadTop5() {
-    const tbody = document.getElementById('leaderboardBody');
-  
-    axios.get('../backend/get_score.php').then(res => {
-      tbody.innerHTML = '';
-  
-      const top5 = res.data.slice(0, 5);
-  
-      top5.forEach(player => {
-        tbody.innerHTML += `
-          <tr>
-            <td>${player.rank}</td>
-            <td>${player.name}</td>
-            <td>${player.score}</td>
-            <td>${player.duration}</td>
-          </tr>
-        `;
-      });
-    });
-  }
-  
-  window.addEventListener('DOMContentLoaded', loadTop5);
-  </script>
   
 </body>
 </html>
